@@ -73,6 +73,9 @@
 #ifndef DEFENV_SYSTEMPERL
 # define DEFENV_SYSTEMPERL ""
 #endif
+#ifndef DEFENV_SYSTEMPERL_INCLUDE
+# define DEFENV_SYSTEMPERL_INCLUDE ""
+#endif
 #ifndef DEFENV_VERILATOR_ROOT
 # define DEFENV_VERILATOR_ROOT ""
 #endif
